
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ nelem (int*) ;
 int* zoom_list ;

__attribute__((used)) static int zoom_out(int oldres)
{
 int i;
 for (i = 0; i < (int)nelem(zoom_list) - 1; ++i)
  if (zoom_list[i] < oldres && zoom_list[i+1] >= oldres)
   return zoom_list[i];
 return zoom_list[0];
}
